Added support for KDBX4 file format